@@ -127,15 +127,17 @@ module Cucumber
       def print_tag_limit_warnings(options)
         if @tag_occurrences
           first_tag = true
-          options[:tag_names].each do |tag_name, limit|
-            unless Ast::Tags.exclude_tag?(tag_name)
-              tag_frequency = @tag_occurrences[tag_name].size
-              if limit && tag_frequency > limit
-                @io.puts if first_tag
-                first_tag = false
-                @io.puts format_string("#{tag_name} occurred #{tag_frequency} times, but the limit was set to #{limit}", :failed)
-                @tag_occurrences[tag_name].each {|location| @io.puts format_string("  #{location}", :failed)}
-                @io.flush
+          options[:tag_names].each do |tag_list|
+            tag_list.each do |tag_name, limit|
+              unless Ast::Tags.exclude_tag?(tag_name)
+                tag_frequency = @tag_occurrences[tag_name].size
+                if limit && tag_frequency > limit
+                  @io.puts if first_tag
+                  first_tag = false
+                  @io.puts format_string("#{tag_name} occurred #{tag_frequency} times, but the limit was set to #{limit}", :failed)
+                  @tag_occurrences[tag_name].each {|location| @io.puts format_string("  #{location}", :failed)}
+                  @io.flush
+                end
               end
             end
           end
@@ -144,9 +146,11 @@ module Cucumber
 
       def record_tag_occurrences(feature_element, options)
         @tag_occurrences ||= Hash.new{|k,v| k[v] = []}
-        options[:tag_names].each do |tag_name, limit|
-          if !Ast::Tags.exclude_tag?(tag_name) && feature_element.tag_count(tag_name) > 0
-            @tag_occurrences[tag_name] << feature_element.file_colon_line
+        options[:tag_names].each do |tag_list|
+          tag_list.each do |tag_name, limit|
+            if !Ast::Tags.exclude_tag?(tag_name) && feature_element.tag_count(tag_name) > 0
+              @tag_occurrences[tag_name] << feature_element.file_colon_line
+            end
           end
         end
       end
